# SCFTP

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  common.c  debugBuild.sh  rebuild.sh  releaseBuild.sh  scftp_config.json  utils.c  utils.h
Client/: CMakeLists.txt  build.sh  debugBuild.sh
Client/src/: Core.c  Core.cpp  Core.h  client.c  client.cpp  utils.c  utils.cpp  utils.h
ConfigTool/include/: common.hpp  utils.hpp
ConfigTool/src/: common.c  common.cpp  main.cpp  utils.c  utils.cpp
ConfigurationTool/: ConfigTool  build.sh  common.c  common.h  debugBuild.sh  main.c  utils.c
Server/: CMakeLists.txt  build.sh  debugBuild.sh
Server/src/: server.c  server.cpp
Testing/: CMakeLists.txt  Cipher  build.sh  main.c
UserMan/: CMakeLists.txt  build.sh  debugBuild.sh  queries.cpp
UserMan/include/: queries.h
UserMan/src/: main.cpp
